linking funker men er ikke staila

--- a/bolig-invest/src/App.css
+++ b/bolig-invest/src/App.css
@@ -27,6 +27,14 @@
   .App-link {
     color: #61dafb;
   }
+
+  .header-teks {
+    text-align: right;
+    /* display: flex; */
+    padding-left: 16vh;
+  }
+
+
   
   @keyframes App-logo-spin {
     from {
