--- a/bolig-invest/src/App.css
+++ b/bolig-invest/src/App.css
@@ -45,3 +45,34 @@
     }
   }
   
+
+
+  /* for headern */
+  .header-container {
+    font-family: Arial, sans-serif;
+    text-align: center;
+  }
+  
+  .header-nav {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  .header-nav li {
+    margin: 0 20px;
+  }
+  
+  .header-nav a {
+    text-decoration: none;
+    color: black;
+    font-size: 16px;
+  }
+  
+  .header-nav a:hover {
+    color: gray;
+  }
+/* ikke lenger for header   */
